--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "react-scripts": "3.4.2"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "heroku-postbuild": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -41,6 +39,5 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
-  },
-  "proxy": "http://localhost:8080"
+  }
 }
