--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "express": "^4.17.1",
+    "fetch": "^1.1.0",
     "mongoose": "^5.9.28",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
@@ -18,7 +19,7 @@
     "serve": "^11.3.2"
   },
   "scripts": {
-    "dev": "react-scripts start",
+    "dev": "react-scripts start && node app.js",
     "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
