--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "dev": "concurrently \"react-scripts start\" \"nodemon app.js\"",
-    "start": "serve -s build",
+    "start": "concurrently \"react-scripts start\" \"nodemon app.js\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
