--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
     "fetch": "^1.1.0",
+    "http-proxy-middleware": "^1.0.5",
     "mongoose": "^5.9.28",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
@@ -22,7 +23,7 @@
   },
   "scripts": {
     "dev": "concurrently \"react-scripts start\" \"nodemon app.js\"",
-    "start": "concurrently \"react-scripts start\" \"nodemon app.js\"",
+    "start": "node app.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
