--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "mongoose": "^5.9.28",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^16.13.1",
+    "react-minimal-pie-chart": "^8.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.2",
     "serve": "^11.3.2"
